--- a/venture-labs/src/components/Header/Header.module.css
+++ b/venture-labs/src/components/Header/Header.module.css
@@ -20,16 +20,14 @@
     border-radius: 10px;
 }
 
+.link{
+    display: flex;
+    flex-direction: column;
+}
+
+.button{
+    text-decoration: none;
+}
 
 
 
-
-
-/* .menulateral{
-    width: 100%;
-    min-height: 110px;
-    background-color: rgb(202, 0, 0);
-    padding: 10px;
-    border-radius: 10px;
-    margin: 20px 0;
-} */
