--- a/venture-labs/src/components/Header/Header.module.css
+++ b/venture-labs/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
 .container{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 50%;
     height: 100%;
     justify-content: space-between;
     margin-top: 3%;
@@ -23,10 +23,8 @@
 .link{
     display: flex;
     flex-direction: column;
-}
-
-.button{
     text-decoration: none;
+    text-decoration-line: none;
 }
 
 
